# buddy3d-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  justfile
.github/workflows/: release.yml
proto/: buddy3d.proto
src/: backoff.rs  config.rs  health.rs  jwt.rs  lib.rs  live_outbound.rs  main.rs  metrics.rs  pkce.rs  rate_limit.rs  supervisor.rs  token_store.rs  tracing_redact.rs  webrtc_session.rs
src/mqtt/: commands.rs  discovery.rs  hub.rs  mod.rs  state.rs  transient.rs
src/proto/: buddy3d.rs  mod.rs
src/prusa/: api.rs  auth.rs  client.rs  commands.rs  mod.rs
src/prusa/signaling/: client.rs  engineio.rs  mod.rs  socketio.rs
src/rtsp/: interleaved.rs  message.rs  mod.rs  sdp.rs  server.rs  session.rs
src/snapshot/: encode.rs  h264.rs  mod.rs
src/supervisor/: mod.rs  webrtc_factory.rs
tests/: manual_smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
