[package]
name = "buddy3d-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "buddy3d_proxy"
path = "src/lib.rs"

[[bin]]
name = "buddy3d-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
jsonwebtoken = "9"
prost = "0.13"
bytes = "1"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
