[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "2"

[package]
name = "buddy3d-proxy"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "buddy3d_proxy"
path = "src/lib.rs"

[[bin]]
name = "buddy3d-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "cookies", "form", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
urlencoding = "2"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
prost = "0.14"
bytes = "1"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
webrtc = "0.17"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
openh264 = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
rumqttd = "0.20"
